--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon npm start"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.1.10"
   }
