--- a/package.json
+++ b/package.json
@@ -2,26 +2,15 @@
   "name": "backend-metro-conectado",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
-    "path": "^0.12.7",
-    "pg": "^8.16.3",
-    "pk": "^1.1.0",
-    "pool": "^0.4.1",
-    "uuid": "^11.1.0",
-    "validator": "^13.15.15"
+    "path": "^0.12.7"
   }
 }
